--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -19,7 +19,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    environment: Enviroment_Second
+    environment: Environment_Second
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
