--- a/.github/workflows/first.yml
+++ b/.github/workflows/first.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Show TEST_SECRET
         env:
           TEST_SECRET: ${{ secrets.TEST_SECRET }}
-        run: echo "The secret is $TEST_SECRET"
+        run: [ "${TEST_SECRET}" -eq 1 ] && echo "one"
           
       # Runs a single command using the runners shell
       - name: Run a one-line script
