--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -27,9 +27,9 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Show TEST_SECRET
-        run: echo "The secret is $TEST_SECRET"
         env:
           TEST_SECRET: ${{ secrets.TEST_SECRET }}
+        run: [ "${TEST_SECRET}" -eq 2 ] && echo two
           
       # Runs a single command using the runners shell
       - name: Run a one-line script
