--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -29,7 +29,12 @@ jobs:
       - name: Show TEST_SECRET
         env:
           TEST_SECRET: ${{ secrets.TEST_SECRET }}
-        run: [ "${TEST_SECRET}" -eq 2 ] && echo two
+        run: if [ "${TEST_SECRET}" -eq 2 ]; then
+                echo "two"
+              else
+                echo "wrong"
+              fi
+            
           
       # Runs a single command using the runners shell
       - name: Run a one-line script
