--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Show TEST_SECRET
         env:
           TEST_SECRET: ${{ secrets.TEST_SECRET }}
-        run: if [ "${TEST_SECRET}" -eq 2 ]; then echo "two" else echo "wrong" fi
+        run: if [ "${TEST_SECRET}" -eq 2 ]; then echo "two"; else echo "wrong"; fi
             
           
       # Runs a single command using the runners shell
